Update retranslate_task to change target language from Greek to Japanese

--- a/config/tasks.yaml
+++ b/config/tasks.yaml
@@ -7,7 +7,7 @@ translate_task:
 
 retranslate_task:
   description: >
-    Translate {sentence} from Korean to Greek without making mistakes.
+    Translate {sentence} from Korean to Japanese without making mistakes.
   expected_output: >
-    A well formatted translation from Korean to Greek using proper capitalization of names and places.
+    A well formatted translation from Korean to Japanese using proper capitalization of names and places.
   agent: translator_agent
