--- a/config/tasks.yaml
+++ b/config/tasks.yaml
@@ -11,3 +11,10 @@ retranslate_task:
   expected_output: >
     A well formatted translation from Korean to Japanese using proper capitalization of names and places.
   agent: translator_agent
+
+count_task:
+  description: >
+    count the amount of letters in a sentence
+  expected_output: >
+    The number is letters in a sentence.
+  agent: counter_agent
