--- a/config/tasks.yaml
+++ b/config/tasks.yaml
@@ -6,7 +6,12 @@ content_harvesting_task:
     1. Use the search tool to search for recent news articles about {topic}
     2. From the search results, identify URLs from credible sources.
 
-    3. **IMPORTANT: Only select actual article pages, not topic hubs or tag listings**
+    3. 
+    **IMPORTANT1: Only select actual article pages, not topic hubs or tag listings
+    **IMPORTANT3: In particular, when the screen like below comes out, look for other articles.
+     - Reuters : We can't find that page
+     - CNBC : We’re sorry, the page you were looking for cannot be found.
+
       You must filter out any URLs that are likely to be:
       - Topic/tag/section index pages (e.g., URLs containing "/tag/", "/topic/", "/hub/", "/section/", "/category/")
       - Pages with no unique headline or timestamp
@@ -231,4 +236,14 @@ final_report_assembly_task:
   agent: curator_agent
   markdown: true
   output_file: output/final_report.md
+  create_directory: true
+
+translate_task:
+  description: >
+    Take the report from the previous task and translate English to Korean without making mistakes.
+  expected_output: >
+    A well formatted translation from English to Korean using proper capitalization of names and places.
+  agent: translator_agent
+  markdown: true
+  output_file: output/final_report_KR.md
   create_directory: true
